--- a/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
@@ -154,17 +154,7 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @if (item.AdoptionDate.HasValue)
-                    {
-                        item.InRescueTime = Math.Round(((item.AdoptionDate.Value - item.IntakeDate).TotalDays / 30), 2);
-                    }
-                    else
-                    {
-                        item.InRescueTime = Math.Round(((DateTime.Today - item.IntakeDate).TotalDays / 30), 2);
-                    }
-                    
-                    
-                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                    @Html.DisplayFor(modelItem => item.InRescueTime) Months
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
@@ -320,7 +310,7 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                    @Html.DisplayFor(modelItem => item.InRescueTime) Months
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
@@ -476,7 +466,7 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                    @Html.DisplayFor(modelItem => item.InRescueTime) Months
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
@@ -632,7 +622,7 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                    @Html.DisplayFor(modelItem => item.InRescueTime) Months
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
